Encode the categorical features

--- a/data/processing_scripts/prepare_data.ipynb
+++ b/data/processing_scripts/prepare_data.ipynb
@@ -1715,7 +1715,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
+   "id": "0f47056e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# encode categorical features\n",
+    "categorical_features = [\"family\", \"day_type\", \"day_locale\", \"day_locale_name\", \"day_description\", \"store_type\", \"store_city\", \"store_state\", \"day_transferred\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "ada4b036",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Label encode categorical columns\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "for col in categorical_features:\n",
+    "    le = LabelEncoder()\n",
+    "    le.fit(pd.concat([train_merged[col], test_merged[col]], axis=0).astype(str))\n",
+    "    train_merged[col] = le.transform(train_merged[col].astype(str))\n",
+    "    test_merged[col] = le.transform(test_merged[col].astype(str))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "7a8b1cc9",
    "metadata": {},
    "outputs": [
@@ -1881,7 +1909,7 @@
        "73202  Latacunga    Cotopaxi          C             15  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
